--- a/one-main/package.json
+++ b/one-main/package.json
@@ -1,38 +1,61 @@
 {
-  "name": "one-main",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "oneMain",
+	"version": "1.0.0",
+	"description": "employment test",
+	"main": "index.js",
+	"scripts": {
+		"build": "webpack --prod --config webpack.config.js",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "webpack-dev-server --dev --config webpack.config.js"
+	},
+	"author": "Will Ramirez",
+	"license": "MIT",
+	"assetPath": "assets",
+	"browserslist": [
+		"> 1%",
+		"last 2 versions"
+	],
+	"dependencies": {
+		"bootstrap": "^5.1.1",
+		"jquery": "^3.4.1",
+		"normalize.css": "^8.0.1"
+	},
+	"devDependencies": {
+		"autoprefixer": "^9.8.6",
+		"babel-core": "^6.26.3",
+		"babel-loader": "^7.1.5",
+		"babel-preset-env": "^1.7.0",
+		"browser-sync": "^2.24.6",
+		"browser-sync-webpack-plugin": "^2.2.2",
+		"cache-loader": "^1.2.2",
+		"clean-webpack-plugin": "^3.0.0",
+		"copy-webpack-plugin": "^4.5.2",
+		"css-loader": "^1.0.0",
+		"cssnano": "^4.1.10",
+		"fast-sass-loader": "^1.4.6",
+		"happypack": "^5.0.0",
+		"hard-source-webpack-plugin": "^0.12.0",
+		"html-loader": "^0.5.5",
+		"html-webpack-plugin": "^3.2.0",
+		"imagemin-mozjpeg": "^7.0.0",
+		"imagemin-webpack-plugin": "^2.2.0",
+		"lodash": "^4.17.10",
+		"mini-css-extract-plugin": "^0.4.1",
+		"multi-json-loader": "^0.2.1",
+		"node-sass": "^4.9.3",
+		"postcss": "^8.3.2",
+		"postcss-cli": "^8.3.1",
+		"postcss-loader": "^2.1.6",
+		"postcss-preset-env": "^6.7.0",
+		"pug": "^2.0.3",
+		"pug-loader": "^2.4.0",
+		"raw-loader": "^2.0.0",
+		"speed-measure-webpack-plugin": "^1.2.2",
+		"style-loader": "^0.21.0",
+		"tailwindcss": "^1.9.6",
+		"uglifyjs-webpack-plugin": "^1.0.0-rc.0",
+		"webpack": "^4.16.2",
+		"webpack-cli": "^3.1.0",
+		"webpack-dev-server": "^3.1.5"
+	}
 }
