--- a/one-main/package.json
+++ b/one-main/package.json
@@ -16,6 +16,7 @@
 		"last 2 versions"
 	],
 	"dependencies": {
+		"axios": "^0.21.4",
 		"bootstrap": "^5.1.1",
 		"jquery": "^3.4.1",
 		"normalize.css": "^8.0.1"
